css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto:wght@300;400;500;700&display=swap');

/* Adding style for the page wrapper in order to keep the footer at bottom. */
html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
}

.page-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

/* Adding in global settings */
html {
  line-height: 1.2em;
}

body {
  background-color: #F0F8FF;
  font-family: 'Poppins', Arial, sans-serif;
  color: #333333;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Added in global heading styles. */
h1, h2, h3, h4, h5, h6 {
  font-size: 30px;
  color: #005B7F;
  margin: 0.2em 0;
}

/* Styles for the headings in the main text */
.main-text h1 {
  font-size: 30px;
  color: #005B7F;
  margin-top: 1em;
  margin-bottom: 0.5em;
  text-align: center;
  line-height: 1.2;
  padding: 0;
}

.main-text h2 {
  font-size: 30px;
  color: #005B7F;
  margin-top: 1em;
  margin-bottom: 0.5em;
  text-align: center;
  line-height: 1.2;
  padding: 0;
}

.main-text h3 {
  font-size: 30px;
  color: #005B7F;
  margin-top: 1em;
  margin-bottom: 0.5em;
  text-align: center;
}

/* Adding in the header styles */
header {
  background-color: #005B7F;
  color: white;
  padding: 1.5em 0;
}

.header-container {
  text-align: center;
  padding: 0.5em;
}

.header-container .logo img {
  max-width: 400px;
  width: 80%;
  height: auto;
  display: block;
  margin: 0 auto;
}

header h1 {
  font-family: 'Roboto', Arial, sans-serif;
  font-size: 30px;
  margin-top: 0.3em;
  margin-bottom: 0.2em;
  color: white;
  text-align: center;
}

/* Adding in navigation styling. */
nav {
  background-color: #ffffff;
  padding: 10px 0;
  text-align: center;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
}

.nav-list {
  list-style: none;
  margin: 0;
  padding: 6px;
}

.nav-list li {
  display: inline;
  margin: 0 15px;
}

.nav-list a {
  color: #005B7F;
  font-size: 22px;
  text-decoration: none;
}

.nav-list a:hover {
  text-decoration: underline;
  color: #007BB5;
}

/* Adding the main content padding. */
.main {
  padding: 3em 10%;
}

/* Adding Style for .main-text. */
.main-text {
  background-color: #ffffff;
  border-radius: 8px;
  padding: 1.2em;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin-bottom: 2em;
}

.main-text p {
  font-size: 1.5em;
  line-height: 1.5em;
  color: #333333;
  margin-top: 0.5em;
  margin-bottom: 1em;
}

strong {
  font-weight: bold;
  color: #005B7F;
}

/* Styling for services, contact, and history divs. */
.servicesDiv, .contactDiv, .historyDiv, .workshopDiv {
  background-color: #ffffff;
  border-radius: 8px;
  padding: 2em;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  margin-bottom: 2em;
}

.servicesDiv h3 {
  font-size: 1.667em;
}

#services-container h2, #contact-container h2, #history-container h2, #workshop-container h2 {
  font-size: 30px;
  color: #005B7F;
  margin-top: 1em;
  margin-bottom: 0.5em;
  text-align: center;
  line-height: 1.2;
  padding: 0;
}

#services-container h3 {
  font-size: 30px;
  color: #005B7F;
  margin-top: 1em;
  margin-bottom: 0.5em;
  text-align: center;
  line-height: 1.2;
  padding: 0;
}

#services-container p, #contact-container p, #history-container p, #workshop-container p {
  font-size: 1.5em;
  line-height: 1.6em;
  color: #333333;
  margin-top: 0.5em;
  margin-bottom: 1em;
}

#services-container ul {
  list-style: none;
  padding: 0;
}

#services-container li {
  font-size: 1.2em;
  color: #333333;
  margin-bottom: 0.5em;
}

#services-container img {
  max-height: 400px;
}

#contact-container a {
  color: #005B7F;
  text-decoration: none;
}

#contact-container a:hover {
  text-decoration: underline;
  color: #007BB5;
}

#workshop-container img {
  max-height: 400px;
}

#history-container img {
  max-height: 400px;
}

/* Adding style for the footer. */
footer {
  background-color: #005B7F;
  color: white;
  text-align: center;
  padding: 0.5em 0;
}

footer p {
  font-size: 1.5em;
  margin: 0;
  line-height: 1.4;
}

footer a {
  color: #FFD700;
  text-decoration: none;
  transition: color 0.3s ease;
}

footer a:hover {
  text-decoration: underline;
  color: #FFCC00;
}

/* Added form styling. */
#contact {
  background-color: white;
  color: #000000;
  padding: 15px;
  margin: 25px auto;
  border-radius: 15px;
  width: 85%;
  max-width: 500px;
  height: 100%;
  max-height: 500px;
  box-shadow: 5px 5px 5px #000000;
}

#formtitle {
  color: #005B7F;
  text-align: center;
  font-size: large;
  font-weight: bold;
  padding: 10px;
}

.form-group {
  color: #005B7F;
  text-align: center;
  font-size: x-large;
  padding: 15px;
  margin: auto;
}

#continfo {
  font-size: 30px;
  color: #005B7F;
  margin-top: 1em;
  margin-bottom: 0.5em;
  text-align: center;
  line-height: 1.2;
  padding: 0;
}

.button {
  background-color: #005B7F;
  color: white;
  padding: 10px 15px;
  font-size: 1.5rem;
  border-radius: 8px;
  cursor: pointer;
  width: 100%;
  margin: auto;
}

.button:hover {
  background-color: #012e3f;
  transition: 0.5s;
}

/* Styling for the slider. */
.slider-container {
  position: relative;
  width: 100%;
  max-width: 400px;
  margin: 20px auto;
  overflow: hidden;
}

.slider {
  display: flex;
  transition: transform 0.5s ease;
}

.slider img {
  width: 100%;
  height: auto;
  flex-shrink: 0;
  display: block;
}

/* The prev/next buttons styling. */
.prev,
.next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  padding: 10px;
  cursor: pointer;
  font-size: 24px;
}

.prev {
  left: 10px;
}

.next {
  right: 10px;
}

/* Style to center images */
.center-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  height: auto;
}

/* Media queries for screens with a minimum width of 480px. */
@media screen and (min-width: 480px) {
  .main {
    padding: 3em 8%;
  }

  .header-container h1 {
    font-size: 30px;
    text-align: center;
    line-height: 1.4;
    padding: 0;
  }

  .nav-list li {
    display: inline-block;
    margin: 0 10px;
  }

  .main-text p {
    font-size: 1.5em;
  }

  .servicesDiv, .contactDiv, .historyDiv, .workshopDiv {
    padding: 1.8em;
  }
}

/* Media queries for screens with a minimum width of 768px. */
@media screen and (min-width: 768px) {
  .main {
    padding: 3em 10%;
  }

  .header-container h1 {
    font-size: 50px;
  }

  .nav-list li {
    display: inline;
    margin: 0 15px;
  }

  .main-text p {
    font-size: 1.5em;
  }

  .servicesDiv, .contactDiv, .historyDiv, .workshopDiv {
    padding: 2em;
  }
}

